--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -5,6 +5,7 @@
     <section name="microsoft.identityModel" type="Microsoft.IdentityModel.Configuration.MicrosoftIdentityModelSection, Microsoft.IdentityModel"/>
     <section name="basicSecurityTokenServiceConfiguration" type="OSDevGrp.OSIntranet.Security.Configuration.ConfigurationProvider, OSDevGrp.OSIntranet.Security"/>
   </configSections>
+  
   <iocConfiguration>
     <container type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Windsor.Container, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
     <containerConfigurationProviders>
@@ -14,6 +15,7 @@
       <add name="intranet" type="OSDevGrp.OSIntranet.Infrastructure.IoC.ConfigurationProvider, OSDevGrp.OSIntranet.Infrastructure"/>
     </containerConfigurationProviders>
   </iocConfiguration>
+  
   <microsoft.identityModel>
     <service>
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel">
@@ -28,6 +30,7 @@
       <certificateValidation certificateValidationMode="None"/>
     </service>
   </microsoft.identityModel>
+  
   <basicSecurityTokenServiceConfiguration>
     <issuerTokenName address="http://localhost:8010/sts"/>
     <signingCertificate subjectName="CN=OSDevGrp.OSIntranet.Tokens"/>
@@ -38,13 +41,13 @@
     </trustedRelyingPartyCollection>
     <claimCollection>
       <clear/>
-      <add claimType="urn://osdevgrp/foodwaste/security/systemmanagement">
+      <add claimType="http://osdevgrp.local/foodwaste/security/systemmanagement" claimValue="true">
         <conditions>
           <clear/>
           <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="mrgottham@gmail.com"/>
         </conditions>
       </add>
-      <add claimType="urn://osdevgrp/foodwaste/security/user">
+      <add claimType="http://osdevgrp.local/foodwaste/security/user" claimValue="true">
         <conditions>
           <clear/>
           <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="^(?(&quot;&quot;)(&quot;&quot;.+?(?&lt;!\\)&quot;&quot;@)|(([0-9a-z]((\.(?!\.))|[-!#\$%&amp;'\*\+/=\?\^`\{\}\|~\w])*)(?&lt;=[0-9a-z])@))(?(\[)(\[(\d{1,3}\.){3}\d{1,3}\])|(([0-9a-z][-\w]*[0-9a-z]*\.)+[a-z0-9][\-a-z0-9]{0,22}[a-z0-9]))$"/>
@@ -52,29 +55,25 @@
       </add>
     </claimCollection>
   </basicSecurityTokenServiceConfiguration>
+  
   <connectionStrings>
     <clear/>
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
     <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.FoodWasteDataProvider" connectionString="SERVER=lxweb; DATABASE=foodwaste; UID=ODBC"/>
   </connectionStrings>
+  
   <appSettings>
     <add key="DebitorSaldoOverNul" value="False"/>
     <add key="KreditorSaldoOverNul" value="True"/>
     <add key="DageForBogføringsperiode" value="30"/>
   </appSettings>
-  <!--
-    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
+  
   <system.web>
     <httpRuntime executionTimeout="600"/>
     <compilation targetFramework="4.5"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+  
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -83,24 +82,45 @@
         </binding>
       </basicHttpBinding>
       <wsHttpBinding>
-        <binding name="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:05:00" receiveTimeout="00:05:00">
+        <binding name="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:05:00" receiveTimeout="00:05:00">
           <security mode="Message">
             <message clientCredentialType="Certificate"/>
           </security>
         </binding>
+        <binding name="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:05:00" receiveTimeout="00:05:00">
+          <security mode="Message">
+            <message clientCredentialType="UserName"/>
+          </security>
+        </binding>
       </wsHttpBinding>
       <ws2007FederationHttpBinding>
-        <binding name="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
+        <binding name="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
           <security mode="Message">
             <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
-              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/WSX509" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding">
                 <identity>
-                  <dns value="OSDevGrp.OSIntranet.Services"/>
+                  <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
                 </identity>
               </issuer>
               <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex">
                 <identity>
-                  <dns value="OSDevGrp.OSIntranet.Services"/>
+                  <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                </identity>
+              </issuerMetadata>
+            </message>
+          </security>
+        </binding>
+        <binding name="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding" transactionFlow="true" maxReceivedMessageSize="4194304" sendTimeout="00:03:00" receiveTimeout="00:03:00">
+          <security mode="Message">
+            <message negotiateServiceCredential="false" issuedTokenType="http://docs.oasis-open.org/wss/oasis-wss-saml-token-profile-1.1#SAMLV1.1">
+              <issuer address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/WSUserName" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding">
+                <identity>
+                  <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
+                </identity>
+              </issuer>
+              <issuerMetadata address="http://localhost/osintranetdev/basicsecuritytokenservice.svc/mex">
+                <identity>
+                  <certificateReference findValue="OSDevGrp.OSIntranet.Services" storeLocation="LocalMachine" storeName="TrustedPeople" x509FindType="FindBySubjectName"/>
                 </identity>
               </issuerMetadata>
             </message>
@@ -124,79 +144,88 @@
     </bindings>
     <services>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.AdressekartotekService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IAdressekartotekService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.FinansstyringService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mobile" binding="basicHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService">
-        </endpoint>
-        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mobile" binding="basicHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.BasicHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFinansstyringService"/>
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.ICommonService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteSystemDataService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
-        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteSystemDataService">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionFederationHttpBinding" contract="IMetadataExchange">
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Tokens"/>
           </identity>
         </endpoint>
       </service>
       <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.BasicSecurityTokenServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract">
+        <endpoint address="WSX509" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract">
+        <endpoint address="WSUserName" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding" contract="IMetadataExchange">
+        <endpoint address="WSX509" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="WSUserName" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrust13SyncContract">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" contract="IMetadataExchange">
           <identity>
             <dns value="OSDevGrp.OSIntranet.Services"/>
           </identity>
@@ -244,12 +273,14 @@
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
+          <!--
           <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Authorization.SecureTokenAuthorizer, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
             <authorizationPolicies>
               <clear/>
-              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.ClaimsAuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
+              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.ClaimsPrincipalBuilderAuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
             </authorizationPolicies>
           </serviceAuthorization>
+          -->
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
@@ -278,13 +309,11 @@
         <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Wcf.IoCInstanceProviderExtension, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
       </behaviorExtensions>
     </extensions>
-    <!--
     <diagnostics>
       <messageLogging logEntireMessage="true" logMalformedMessages="false" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="false" maxMessagesToLog="8192" maxSizeOfMessageToLog="1048576"/>
     </diagnostics>
-    -->
   </system.serviceModel>
-  <!--
+  
   <system.diagnostics>
     <sharedListeners>
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.svclog"/>
@@ -295,17 +324,17 @@
           <add name="sharedListener"/>
         </listeners>
       </source>
-      <source name="System.ServiceModel.MessageLogging">
+      <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
       </source>
-      <source name="System.IdentityModel">
+      <source name="System.IdentityModel" switchValue="Verbose">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
       </source>
-      <source name="Microsoft.IdentityModel">
+      <source name="Microsoft.IdentityModel" switchValue="Verbose">
         <listeners>
           <add name="sharedListener"/>
         </listeners>
@@ -313,5 +342,4 @@
     </sources>
     <trace autoflush="true"/>
   </system.diagnostics>
-  -->
 </configuration>
