--- a/OSDevGrp.OSIntranet.Security/OSDevGrp.OSIntranet.Security.csproj
+++ b/OSDevGrp.OSIntranet.Security/OSDevGrp.OSIntranet.Security.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\RequiredClaimTypeAttribute.cs" />
-    <Compile Include="Authorization\ClaimsAuthorizationPolicy.cs" />
+    <Compile Include="Authorization\ClaimsPrincipalBuilderAuthorizationPolicy.cs" />
     <Compile Include="Authorization\AuthorizationHandler.cs" />
     <Compile Include="Authorization\IAuthorizationHandler.cs" />
     <Compile Include="Authorization\SecureTokenAuthorizer.cs" />
@@ -67,7 +67,18 @@
     <Compile Include="Configuration\RegularExpressionConfigurationElementCollection.cs" />
     <Compile Include="Configuration\UriConfigurationElement.cs" />
     <Compile Include="Configuration\UriConfigurationElementCollection.cs" />
-    <Compile Include="Helper\CertificateHelper.cs" />
+    <Compile Include="Core\AuthorizationHandler.cs" />
+    <Compile Include="Core\CertificateHelper.cs" />
+    <Compile Include="Core\CommonValidation.cs" />
+    <Compile Include="Core\IAuthorizationHandler.cs" />
+    <Compile Include="Core\ICommonValidation.cs" />
+    <Compile Include="Core\IdentityBuilder.cs" />
+    <Compile Include="Core\IIdentityBuilder.cs" />
+    <Compile Include="Core\IIdentityProvider.cs" />
+    <Compile Include="Core\UserNameAsMailAddressAuthorizationPolicy.cs" />
+    <Compile Include="Core\UserNameAsMailAddressSecurityTokenAuthenticator.cs" />
+    <Compile Include="Core\UserNameAsMailAddressSecurityTokenHandler.cs" />
+    <Compile Include="Core\UserNameAsMailAddressValidator.cs" />
     <Compile Include="Services\BasicSecurityTokenServiceConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BasicSecurityTokenService.cs" />
