--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -291,13 +291,21 @@
     <Compile Include="Unittests\Resources\ResourceExceptionTests.cs" />
     <Compile Include="Unittests\Resources\ResourceTests.cs" />
     <Compile Include="Unittests\Security\Authorization\AuthorizationHandlerTests.cs" />
-    <Compile Include="Unittests\Security\Authorization\ClaimsAuthorizationPolicyTests.cs" />
+    <Compile Include="Unittests\Security\Authorization\ClaimsPrincipalBuilderAuthorizationPolicyTests.cs" />
     <Compile Include="Unittests\Security\Authorization\SecureTokenAuthorizerTests.cs" />
     <Compile Include="Unittests\Security\Claims\FoodWasteClaimTypesTests.cs" />
     <Compile Include="Unittests\Security\Configuration\ConfigurationProviderTests.cs" />
     <Compile Include="Unittests\Security\Attributes\RequiredClaimTypeAttributeTests.cs" />
+    <Compile Include="Unittests\Security\Core\AuthorizationHandlerTests.cs" />
+    <Compile Include="Unittests\Security\Core\CommonValidationTests.cs" />
+    <Compile Include="Unittests\Security\Core\IdentityBuilderTests.cs" />
+    <Compile Include="Unittests\Security\Core\UserNameAsMailAddressAuthorizationPolicyTests.cs" />
+    <Compile Include="Unittests\Security\Core\UserNameAsMailAddressSecurityTokenAuthenticatorTests.cs" />
+    <Compile Include="Unittests\Security\Core\UserNameAsMailAddressSecurityTokenHandlerTests.cs" />
+    <Compile Include="Unittests\Security\Core\UserNameAsMailAddressValidatorTests.cs" />
     <Compile Include="Unittests\Security\Services\BasicSecurityTokenServiceConfigurationTests.cs" />
     <Compile Include="Unittests\Security\Services\BasicSecurityTokenServiceTests.cs" />
+    <Compile Include="Unittests\Security\TestHelper.cs" />
     <Compile Include="Unittests\Services\AdressekartotekServiceTests.cs" />
     <Compile Include="Unittests\Services\CommonServiceTests.cs" />
     <Compile Include="Unittests\Services\FinansstyringServiceTests.cs" />
