--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -273,14 +273,12 @@
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
-          <!--
-          <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Authorization.SecureTokenAuthorizer, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
+          <serviceAuthorization serviceAuthorizationManagerType="OSDevGrp.OSIntranet.Security.Core.SecureTokenAuthorizer, OSDevGrp.OSIntranet.Security" principalPermissionMode="Custom">
             <authorizationPolicies>
               <clear/>
-              <add policyType="OSDevGrp.OSIntranet.Security.Authorization.ClaimsPrincipalBuilderAuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
+              <add policyType="OSDevGrp.OSIntranet.Security.Core.ClaimsPrincipalBuilderAuthorizationPolicy, OSDevGrp.OSIntranet.Security"/>
             </authorizationPolicies>
           </serviceAuthorization>
-          -->
           <serviceThrottling maxConcurrentCalls="500" maxConcurrentSessions="10000" maxConcurrentInstances="100"/>
           <ioc/>
         </behavior>
@@ -309,11 +307,14 @@
         <add name="ioc" type="OSDevGrp.OSIntranet.CommonLibrary.IoC.Wcf.IoCInstanceProviderExtension, OSDevGrp.OSIntranet.CommonLibrary.IoC"/>
       </behaviorExtensions>
     </extensions>
+    <!--
     <diagnostics>
       <messageLogging logEntireMessage="true" logMalformedMessages="false" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="false" maxMessagesToLog="8192" maxSizeOfMessageToLog="1048576"/>
     </diagnostics>
+    -->
   </system.serviceModel>
-  
+
+  <!--
   <system.diagnostics>
     <sharedListeners>
       <add name="sharedListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Windows\Temp\OSDevGrp.OSIntranet.svclog"/>
@@ -342,4 +343,5 @@
     </sources>
     <trace autoflush="true"/>
   </system.diagnostics>
+  -->
 </configuration>
