--- a/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DataProviders\IFoodWasteDataProvider.cs" />
     <Compile Include="DataProviders\IMySqlDataProvider.cs" />
     <Compile Include="DataProxies\FoodWaste\ITranslationInfoProxy.cs" />
+    <Compile Include="DataProxies\FoodWaste\ITranslationProxy.cs" />
     <Compile Include="DataProxies\Fælles\ISystemProxy.cs" />
     <Compile Include="DataProxies\IDataProxyBase.cs" />
     <Compile Include="DataProxies\ILazyLoadable.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="DataProxies\Kalender\IAftaleProxy.cs" />
     <Compile Include="DataProxies\Kalender\IBrugeraftaleProxy.cs" />
     <Compile Include="DataProxies\Kalender\IBrugerProxy.cs" />
+    <Compile Include="FoodWaste\IDataRepository.cs" />
     <Compile Include="FoodWaste\ISystemDataRepository.cs" />
     <Compile Include="IAdresseRepository.cs" />
     <Compile Include="DataProviders\IDataProviderBase.cs" />
