--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="Commands\BogføringslinjeOpretCommand.cs" />
     <Compile Include="Commands\TranslationAddCommand.cs" />
+    <Compile Include="Commands\TranslationDeleteCommand.cs" />
+    <Compile Include="Commands\TranslationModifyCommand.cs" />
     <Compile Include="Faults\FoodWasteFault.cs" />
     <Compile Include="Faults\FoodWasteFaultType.cs" />
     <Compile Include="Queries\AdressegrupperGetQuery.cs" />
