--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -96,6 +96,7 @@
     <Compile Include="DataProviders\FoodWasteDataProvider.cs" />
     <Compile Include="DataProviders\MySqlDataProvider.cs" />
     <Compile Include="DataProxies\DataProxyHelper.cs" />
+    <Compile Include="DataProxies\FoodWaste\DataProviderProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\TranslationInfoProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\TranslationProxy.cs" />
     <Compile Include="DataProxies\Fælles\SystemProxy.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="DomainObjectBuilder.cs" />
     <Compile Include="FinansstyringRepository.cs" />
     <Compile Include="FoodWaste\DataRepositoryBase.cs" />
+    <Compile Include="FoodWaste\DataRepositoryHelper.cs" />
     <Compile Include="FoodWaste\SystemDataRepository.cs" />
     <Compile Include="FællesRepository.cs" />
     <Compile Include="KalenderRepository.cs" />
